# backend/licitatie-curieri/src/main/java/ro/fmi/unibuc/licitatie_curieri/controller/OrderController.java
@@ -3,6 +3,7 @@ package ro.fmi.unibuc.licitatie_curieri.controller;
 import lombok.RequiredArgsConstructor;
 
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RestController;
 import ro.fmi.unibuc.licitatie_curieri.common.utils.LogMessageUtils;
@@ -21,5 +22,13 @@ public class OrderController implements OrderApi {
         log.info(String.format(LogMessageUtils.CREATE_ORDER));
 
         return orderService.createOrder(orderCreationDto);
+    }
+
+    @Override
+    public OrderDetailsDto getOrderDetails(@PathVariable(value = "order_id") Long orderId)
+    {
+        log.info(String.format(LogMessageUtils.GET_ORDER_DETAILS, orderId));
+
+        return orderService.getOrderDetails(orderId);
     }
 }
