# backend/licitatie-curieri/src/main/resources/openapi/order.yaml
@@ -36,6 +36,41 @@ paths:
             application/json:
               schema:
                 $ref: 'common.yaml#/components/schemas/GenericApplicationError'
+  /orders/{order_id}:
+    get:
+      tags:
+        - Order
+      summary: Fetches Details for an Order. Only Users of type COURIER can fetch Order Details
+      operationId: getOrderDetails
+      parameters:
+        - name: order_id
+          schema:
+            type: integer
+            format: int64
+          required: true
+          in: path
+          description: ID of the Order
+          example: 100
+      responses:
+        '200':
+          description: Resources successfully fetched.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/OrderDetails'
+        '403':
+          description: User is not allowed to view order details.
+          content:
+            application/json:
+              schema:
+                $ref: 'common.yaml#/components/schemas/GenericApplicationError'
+        '404':
+          description: Order not found.
+          content:
+            application/json:
+              schema:
+                $ref: 'common.yaml#/components/schemas/GenericApplicationError'
+
 components:
   schemas:
     OrderCreation:
@@ -121,3 +156,27 @@ components:
           type: integer
           format: int32
           example: 4
+    OrderDetails:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+          description: ID of the Order
+        deliveryAddress:
+          $ref: '../openapi/address.yaml#/components/schemas/AddressDetails'
+        foodPrice:
+          type: number
+          format: double
+          description: Price of the food
+        deliveryPrice:
+          type: number
+          format: double
+          description: Delivery price
+        orderStatus:
+          type: string
+          description: Current status of the order
+        items:
+          type: array
+          items:
+            $ref: '#/components/schemas/OrderCreationItemResponse'
